grammar/clikeParser.cpp

// Generated from ../grammar/clike.g4 by ANTLR 4.7.1


#include "clikeListener.h"
#include "clikeVisitor.h"

#include "clikeParser.h"


using namespace antlrcpp;
using namespace antlr4;

clikeParser::clikeParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

clikeParser::~clikeParser() {
  delete _interpreter;
}

std::string clikeParser::getGrammarFileName() const {
  return "clike.g4";
}

const std::vector<std::string>& clikeParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& clikeParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

clikeParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<clikeParser::Statement_topContext *> clikeParser::ProgramContext::statement_top() {
  return getRuleContexts<clikeParser::Statement_topContext>();
}

clikeParser::Statement_topContext* clikeParser::ProgramContext::statement_top(size_t i) {
  return getRuleContext<clikeParser::Statement_topContext>(i);
}


size_t clikeParser::ProgramContext::getRuleIndex() const {
  return clikeParser::RuleProgram;
}

void clikeParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void clikeParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any clikeParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<clikeVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

clikeParser::ProgramContext* clikeParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, clikeParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(60);
      statement_top();
      setState(63); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << clikeParser::T__0)
      | (1ULL << clikeParser::T__1)
      | (1ULL << clikeParser::T__2)
      | (1ULL << clikeParser::T__4)
      | (1ULL << clikeParser::T__7)
      | (1ULL << clikeParser::T__8)
      | (1ULL << clikeParser::Name))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Statement_topContext ------------------------------------------------------------------

clikeParser::Statement_topContext::Statement_topContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

clikeParser::S_var_defContext* clikeParser::Statement_topContext::s_var_def() {
  return getRuleContext<clikeParser::S_var_defContext>(0);
}

clikeParser::S_var_assignContext* clikeParser::Statement_topContext::s_var_assign() {
  return getRuleContext<clikeParser::S_var_assignContext>(0);
}

clikeParser::S_var_expressionContext* clikeParser::Statement_topContext::s_var_expression() {
  return getRuleContext<clikeParser::S_var_expressionContext>(0);
}

clikeParser::S_ifContext* clikeParser::Statement_topContext::s_if() {
  return getRuleContext<clikeParser::S_ifContext>(0);
}

clikeParser::S_whileContext* clikeParser::Statement_topContext::s_while() {
  return getRuleContext<clikeParser::S_whileContext>(0);
}

clikeParser::S_fdefContext* clikeParser::Statement_topContext::s_fdef() {
  return getRuleContext<clikeParser::S_fdefContext>(0);
}

clikeParser::S_callContext* clikeParser::Statement_topContext::s_call() {
  return getRuleContext<clikeParser::S_callContext>(0);
}


size_t clikeParser::Statement_topContext::getRuleIndex() const {
  return clikeParser::RuleStatement_top;
}

void clikeParser::Statement_topContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement_top(this);
}

void clikeParser::Statement_topContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement_top(this);
}


antlrcpp::Any clikeParser::Statement_topContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<clikeVisitor*>(visitor))
    return parserVisitor->visitStatement_top(this);
  else
    return visitor->visitChildren(this);
}

clikeParser::Statement_topContext* clikeParser::statement_top() {
  Statement_topContext *_localctx = _tracker.createInstance<Statement_topContext>(_ctx, getState());
  enterRule(_localctx, 2, clikeParser::RuleStatement_top);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(72);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(65);
      s_var_def();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(66);
      s_var_assign();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(67);
      s_var_expression();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(68);
      s_if();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(69);
      s_while();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(70);
      s_fdef();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(71);
      s_call();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Statement_ifContext ------------------------------------------------------------------

clikeParser::Statement_ifContext::Statement_ifContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

clikeParser::S_var_defContext* clikeParser::Statement_ifContext::s_var_def() {
  return getRuleContext<clikeParser::S_var_defContext>(0);
}

clikeParser::S_var_assignContext* clikeParser::Statement_ifContext::s_var_assign() {
  return getRuleContext<clikeParser::S_var_assignContext>(0);
}

clikeParser::S_var_expressionContext* clikeParser::Statement_ifContext::s_var_expression() {
  return getRuleContext<clikeParser::S_var_expressionContext>(0);
}

clikeParser::S_ifContext* clikeParser::Statement_ifContext::s_if() {
  return getRuleContext<clikeParser::S_ifContext>(0);
}

clikeParser::S_whileContext* clikeParser::Statement_ifContext::s_while() {
  return getRuleContext<clikeParser::S_whileContext>(0);
}

clikeParser::S_callContext* clikeParser::Statement_ifContext::s_call() {
  return getRuleContext<clikeParser::S_callContext>(0);
}

clikeParser::S_returnContext* clikeParser::Statement_ifContext::s_return() {
  return getRuleContext<clikeParser::S_returnContext>(0);
}


size_t clikeParser::Statement_ifContext::getRuleIndex() const {
  return clikeParser::RuleStatement_if;
}

void clikeParser::Statement_ifContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement_if(this);
}

void clikeParser::Statement_ifContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement_if(this);
}


antlrcpp::Any clikeParser::Statement_ifContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<clikeVisitor*>(visitor))
    return parserVisitor->visitStatement_if(this);
  else
    return visitor->visitChildren(this);
}

clikeParser::Statement_ifContext* clikeParser::statement_if() {
  Statement_ifContext *_localctx = _tracker.createInstance<Statement_ifContext>(_ctx, getState());
  enterRule(_localctx, 4, clikeParser::RuleStatement_if);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(81);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(74);
      s_var_def();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(75);
      s_var_assign();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(76);
      s_var_expression();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(77);
      s_if();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(78);
      s_while();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(79);
      s_call();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(80);
      s_return();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Statement_whileContext ------------------------------------------------------------------

clikeParser::Statement_whileContext::Statement_whileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

clikeParser::S_var_defContext* clikeParser::Statement_whileContext::s_var_def() {
  return getRuleContext<clikeParser::S_var_defContext>(0);
}

clikeParser::S_var_assignContext* clikeParser::Statement_whileContext::s_var_assign() {
  return getRuleContext<clikeParser::S_var_assignContext>(0);
}

clikeParser::S_var_expressionContext* clikeParser::Statement_whileContext::s_var_expression() {
  return getRuleContext<clikeParser::S_var_expressionContext>(0);
}

clikeParser::S_ifContext* clikeParser::Statement_whileContext::s_if() {
  return getRuleContext<clikeParser::S_ifContext>(0);
}

clikeParser::S_whileContext* clikeParser::Statement_whileContext::s_while() {
  return getRuleContext<clikeParser::S_whileContext>(0);
}

clikeParser::S_breakContext* clikeParser::Statement_whileContext::s_break() {
  return getRuleContext<clikeParser::S_breakContext>(0);
}

clikeParser::S_callContext* clikeParser::Statement_whileContext::s_call() {
  return getRuleContext<clikeParser::S_callContext>(0);
}

clikeParser::S_returnContext* clikeParser::Statement_whileContext::s_return() {
  return getRuleContext<clikeParser::S_returnContext>(0);
}


size_t clikeParser::Statement_whileContext::getRuleIndex() const {
  return clikeParser::RuleStatement_while;
}

void clikeParser::Statement_whileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement_while(this);
}

void clikeParser::Statement_whileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement_while(this);
}


antlrcpp::Any clikeParser::Statement_whileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<clikeVisitor*>(visitor))
    return parserVisitor->visitStatement_while(this);
  else
    return visitor->visitChildren(this);
}

clikeParser::Statement_whileContext* clikeParser::statement_while() {
  Statement_whileContext *_localctx = _tracker.createInstance<Statement_whileContext>(_ctx, getState());
  enterRule(_localctx, 6, clikeParser::RuleStatement_while);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(91);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(83);
      s_var_def();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(84);
      s_var_assign();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(85);
      s_var_expression();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(86);
      s_if();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(87);
      s_while();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(88);
      s_break();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(89);
      s_call();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(90);
      s_return();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Statement_functionContext ------------------------------------------------------------------

clikeParser::Statement_functionContext::Statement_functionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

clikeParser::S_var_defContext* clikeParser::Statement_functionContext::s_var_def() {
  return getRuleContext<clikeParser::S_var_defContext>(0);
}

clikeParser::S_var_assignContext* clikeParser::Statement_functionContext::s_var_assign() {
  return getRuleContext<clikeParser::S_var_assignContext>(0);
}

clikeParser::S_var_expressionContext* clikeParser::Statement_functionContext::s_var_expression() {
  return getRuleContext<clikeParser::S_var_expressionContext>(0);
}

clikeParser::S_ifContext* clikeParser::Statement_functionContext::s_if() {
  return getRuleContext<clikeParser::S_ifContext>(0);
}

clikeParser::S_whileContext* clikeParser::Statement_functionContext::s_while() {
  return getRuleContext<clikeParser::S_whileContext>(0);
}

clikeParser::S_callContext* clikeParser::Statement_functionContext::s_call() {
  return getRuleContext<clikeParser::S_callContext>(0);
}

clikeParser::S_returnContext* clikeParser::Statement_functionContext::s_return() {
  return getRuleContext<clikeParser::S_returnContext>(0);
}


size_t clikeParser::Statement_functionContext::getRuleIndex() const {
  return clikeParser::RuleStatement_function;
}

void clikeParser::Statement_functionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement_function(this);
}

void clikeParser::Statement_functionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement_function(this);
}


antlrcpp::Any clikeParser::Statement_functionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<clikeVisitor*>(visitor))
    return parserVisitor->visitStatement_function(this);
  else
    return visitor->visitChildren(this);
}

clikeParser::Statement_functionContext* clikeParser::statement_function() {
  Statement_functionContext *_localctx = _tracker.createInstance<Statement_functionContext>(_ctx, getState());
  enterRule(_localctx, 8, clikeParser::RuleStatement_function);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(100);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(93);
      s_var_def();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(94);
      s_var_assign();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(95);
      s_var_expression();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(96);
      s_if();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(97);
      s_while();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(98);
      s_call();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(99);
      s_return();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- S_var_defContext ------------------------------------------------------------------

clikeParser::S_var_defContext::S_var_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

clikeParser::Type_identifierContext* clikeParser::S_var_defContext::type_identifier() {
  return getRuleContext<clikeParser::Type_identifierContext>(0);
}

clikeParser::IdentifierContext* clikeParser::S_var_defContext::identifier() {
  return getRuleContext<clikeParser::IdentifierContext>(0);
}

tree::TerminalNode* clikeParser::S_var_defContext::Semicolon() {
  return getToken(clikeParser::Semicolon, 0);
}


size_t clikeParser::S_var_defContext::getRuleIndex() const {
  return clikeParser::RuleS_var_def;
}

void clikeParser::S_var_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterS_var_def(this);
}

void clikeParser::S_var_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitS_var_def(this);
}


antlrcpp::Any clikeParser::S_var_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<clikeVisitor*>(visitor))
    return parserVisitor->visitS_var_def(this);
  else
    return visitor->visitChildren(this);
}

clikeParser::S_var_defContext* clikeParser::s_var_def() {
  S_var_defContext *_localctx = _tracker.createInstance<S_var_defContext>(_ctx, getState());
  enterRule(_localctx, 10, clikeParser::RuleS_var_def);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    type_identifier();
    setState(103);
    identifier();
    setState(104);
    match(clikeParser::Semicolon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- S_var_assignContext ------------------------------------------------------------------

clikeParser::S_var_assignContext::S_var_assignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

clikeParser::IdentifierContext* clikeParser::S_var_assignContext::identifier() {
  return getRuleContext<clikeParser::IdentifierContext>(0);
}

tree::TerminalNode* clikeParser::S_var_assignContext::Equals() {
  return getToken(clikeParser::Equals, 0);
}

clikeParser::ValueContext* clikeParser::S_var_assignContext::value() {
  return getRuleContext<clikeParser::ValueContext>(0);
}

tree::TerminalNode* clikeParser::S_var_assignContext::Semicolon() {
  return getToken(clikeParser::Semicolon, 0);
}


size_t clikeParser::S_var_assignContext::getRuleIndex() const {
  return clikeParser::RuleS_var_assign;
}

void clikeParser::S_var_assignContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterS_var_assign(this);
}

void clikeParser::S_var_assignContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitS_var_assign(this);
}


antlrcpp::Any clikeParser::S_var_assignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<clikeVisitor*>(visitor))
    return parserVisitor->visitS_var_assign(this);
  else
    return visitor->visitChildren(this);
}

clikeParser::S_var_assignContext* clikeParser::s_var_assign() {
  S_var_assignContext *_localctx = _tracker.createInstance<S_var_assignContext>(_ctx, getState());
  enterRule(_localctx, 12, clikeParser::RuleS_var_assign);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    identifier();
    setState(107);
    match(clikeParser::Equals);
    setState(108);
    value();
    setState(109);
    match(clikeParser::Semicolon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- S_var_expressionContext ------------------------------------------------------------------

clikeParser::S_var_expressionContext::S_var_expressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

clikeParser::IdentifierContext* clikeParser::S_var_expressionContext::identifier() {
  return getRuleContext<clikeParser::IdentifierContext>(0);
}

tree::TerminalNode* clikeParser::S_var_expressionContext::Equals() {
  return getToken(clikeParser::Equals, 0);
}

std::vector<clikeParser::ValueContext *> clikeParser::S_var_expressionContext::value() {
  return getRuleContexts<clikeParser::ValueContext>();
}

clikeParser::ValueContext* clikeParser::S_var_expressionContext::value(size_t i) {
  return getRuleContext<clikeParser::ValueContext>(i);
}

clikeParser::OpContext* clikeParser::S_var_expressionContext::op() {
  return getRuleContext<clikeParser::OpContext>(0);
}

tree::TerminalNode* clikeParser::S_var_expressionContext::Semicolon() {
  return getToken(clikeParser::Semicolon, 0);
}


size_t clikeParser::S_var_expressionContext::getRuleIndex() const {
  return clikeParser::RuleS_var_expression;
}

void clikeParser::S_var_expressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterS_var_expression(this);
}

void clikeParser::S_var_expressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitS_var_expression(this);
}


antlrcpp::Any clikeParser::S_var_expressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<clikeVisitor*>(visitor))
    return parserVisitor->visitS_var_expression(this);
  else
    return visitor->visitChildren(this);
}

clikeParser::S_var_expressionContext* clikeParser::s_var_expression() {
  S_var_expressionContext *_localctx = _tracker.createInstance<S_var_expressionContext>(_ctx, getState());
  enterRule(_localctx, 14, clikeParser::RuleS_var_expression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    identifier();
    setState(112);
    match(clikeParser::Equals);
    setState(113);
    value();
    setState(114);
    op();
    setState(115);
    value();
    setState(116);
    match(clikeParser::Semicolon);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- S_ifContext ------------------------------------------------------------------

clikeParser::S_ifContext::S_ifContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* clikeParser::S_ifContext::LeftParen() {
  return getToken(clikeParser::LeftParen, 0);
}

clikeParser::LogicalContext* clikeParser::S_ifContext::logical() {
  return getRuleContext<clikeParser::LogicalContext>(0);
}

tree::TerminalNode* clikeParser::S_ifContext::RightParen() {
  return getToken(clikeParser::RightParen, 0);
}

tree::TerminalNode* clikeParser::S_ifContext::LeftBrace() {
  return getToken(clikeParser::LeftBrace, 0);
}

tree::TerminalNode* clikeParser::S_ifContext::RightBrace() {
  return getToken(clikeParser::RightBrace, 0);
}

std::vector<clikeParser::Statement_ifContext *> clikeParser::S_ifContext::statement_if() {
  return getRuleContexts<clikeParser::Statement_ifContext>();
}

clikeParser::Statement_ifContext* clikeParser::S_ifContext::statement_if(size_t i) {
  return getRuleContext<clikeParser::Statement_ifContext>(i);
}


size_t clikeParser::S_ifContext::getRuleIndex() const {
  return clikeParser::RuleS_if;
}

void clikeParser::S_ifContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterS_if(this);
}

void clikeParser::S_ifContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitS_if(this);
}


antlrcpp::Any clikeParser::S_ifContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<clikeVisitor*>(visitor))
    return parserVisitor->visitS_if(this);
  else
    return visitor->visitChildren(this);
}

clikeParser::S_ifContext* clikeParser::s_if() {
  S_ifContext *_localctx = _tracker.createInstance<S_ifContext>(_ctx, getState());
  enterRule(_localctx, 16, clikeParser::RuleS_if);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(clikeParser::T__0);
    setState(119);
    match(clikeParser::LeftParen);
    setState(120);
    logical();
    setState(121);
    match(clikeParser::RightParen);
    setState(122);
    match(clikeParser::LeftBrace);
    setState(124); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(123);
      statement_if();
      setState(126); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << clikeParser::T__0)
      | (1ULL << clikeParser::T__1)
      | (1ULL << clikeParser::T__4)
      | (1ULL << clikeParser::T__5)
      | (1ULL << clikeParser::T__7)
      | (1ULL << clikeParser::T__8)
      | (1ULL << clikeParser::Name))) != 0));
    setState(128);
    match(clikeParser::RightBrace);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- S_whileContext ------------------------------------------------------------------

clikeParser::S_whileContext::S_whileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* clikeParser::S_whileContext::LeftParen() {
  return getToken(clikeParser::LeftParen, 0);
}

clikeParser::LogicalContext* clikeParser::S_whileContext::logical() {
  return getRuleContext<clikeParser::LogicalContext>(0);
}

tree::TerminalNode* clikeParser::S_whileContext::RightParen() {
  return getToken(clikeParser::RightParen, 0);
}

tree::TerminalNode* clikeParser::S_whileContext::LeftBrace() {
  return getToken(clikeParser::LeftBrace, 0);
}

tree::TerminalNode* clikeParser::S_whileContext::RightBrace() {
  return getToken(clikeParser::RightBrace, 0);
}

std::vector<clikeParser::Statement_whileContext *> clikeParser::S_whileContext::statement_while() {
  return getRuleContexts<clikeParser::Statement_whileContext>();
}

clikeParser::Statement_whileContext* clikeParser::S_whileContext::statement_while(size_t i) {
  return getRuleContext<clikeParser::Statement_whileContext>(i);
}


size_t clikeParser::S_whileContext::getRuleIndex() const {
  return clikeParser::RuleS_while;
}

void clikeParser::S_whileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterS_while(this);
}

void clikeParser::S_whileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<clikeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitS_while(this);
}


antlrcpp::Any clikeParser::S_whileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<clikeVisitor*>(visitor))
    return parserVisitor->visitS_while(this);
  else
    return visitor->visitChildren(this);
}

clikeParser::S_whileContext* clikeParser::s_while() {
  S_whileContext *_localctx = _tracker.createInstance<S_whileContext>(_ctx, getState());
  enterRule(_localctx, 18, clikeParser::RuleS_while);
  size_t _la = 0;
